# python-claude

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/commands/: mypy.md  pytest.md  ruff.md
.github/workflows/: ci.yml  license-check-python.yml  pyproject-license-check.yml
hooks/: hooks.json
src/python_claude/: __init__.py  cli.py
src/python_claude/hooks/: __init__.py  base.py  edited_hook.py  git_status_hook.py  mypy_hook.py  pytest_hook.py  ruff_check_hook.py  ruff_format_hook.py  session_start_hook.py  state.py  toggle_hook.py
tests/: __init__.py  test_edited_hook.py  test_hook_base.py  test_hook_input.py  test_mypy_hook.py  test_pytest_hook.py  test_ruff_check_hook.py  test_ruff_format_hook.py  test_session_start_hook.py  test_state.py  test_toggle_hook.py
