[project]
name = "python-claude"
version = "0.4.1"
description = "Python hooks for Claude Code"
authors = [{name = "CVector", email = "support@cvector.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.scripts]
python-claude = "python_claude.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "mypy>=1.15.0,<2",
    "ruff>=0.11.10,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_claude"]

[tool.mypy]
strict = true
